2012/02/10 (TS):
 - drvLan9118.c: Attempt to do a hard reset first thing during
   initialization (drvLan9118Setup()). However, this only works
   if the reset line (nReset) is tied to a GPIO pin on the uC5282.
   This is the case with the current PAD design but the PAC does
   *not* feature this connection.
 - drvLan9118.c: Cleaned up endianness detection and handling.
   Should now work for all cases (including 32-bit port size).
   Added more comments explaining the endianness issues including
   a table exploring all possibilities of ENDIAN, cross-wiring
   and software-byte swapping.
 - drvLan9118.c: Fixed stdint 'printf' formats using macros
   from <inttypes.h>.
 - lanIpBasicTest.c: made timeouts for udpBouncer global variables
   (in milli-seconds) allowing for tuning them.
2011/04/19 (TS):
 - lanIpBasic.c, lanIpBasic.h: added udpSockRefBuf().
2010/06/16 (TS):
 - drvLan9118.c: BUGFIX -- ISR was installed and interrupts enabled BEFORE
   the daemon task executed. Thus it could happen that interrupts were lost
   (because the RTEMS event was posted to an invalid TID or to one that
   had not been started yet) leaving the daemon blocked and interrupts disabled.
2010/06/11 (TS):
 - drvGnrIpBasic.c: BUGFIX -- rtems_task_start() clears all RTEMS events.
   Therefore, IRQs happening between hw_start (which enables IRQs) and
   task_start are lost. To make sure no IRQs are lost we enable irqs
   from the driver task before entering its work loop.
2010/04/14 (TS):
 - Makefile.am, tsec_lldrv.c: Added support for mvme3100's tsec NIC
   (***UNTESTED*** [I don't have a transition module for testing with
   a secondary ethernet port]).

   NOTE: This requires rtems-4.10 with some new API features!

2010/03/17 (TS):
 - lanIpBasic.c: Fixed IGMP problems:
     o igmp_send_msg(): even if buffer allocation fails a valid
       MC address may still be found. Moved lookup outside of
       'if ( buf_p )' statement.
     o BUGFIX: igmp_timeo() dereferenced 'mca' pointer even if